bumping version to 1.1.0